<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to_productive_life"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/collaboration_with_students"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <ImageView
        android:id="@+id/im_image"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/gdg"
        android:src="@color/purple_500" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skip_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:elevation="8dp"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_light"
        app:icon="@drawable/boarding_arrow"
        app:iconGravity="textEnd"
        app:iconTint="@android:color/holo_blue_light" />

    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:clickable="true"
        android:text="@string/you_have_already_an_account"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp" />


</LinearLayout>