<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="12dp"
    tools:context="com.example.homework3android2.ui.fragments.CreateTaskFragment">

    <EditText
        android:id="@+id/et_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle"
        android:hint="@string/write_anything_you_want"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/due_date"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_task" />

    <TextView
        android:id="@+id/tv_date_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:drawableEnd="@drawable/calendar"
        android:drawablePadding="8dp"
        android:padding="10dp"
        android:text="@string/_1_20_22"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date_hint" />

    <TextView
        android:id="@+id/tv_frequency_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:drawableEnd="@drawable/arrow_down"
        android:drawablePadding="8dp"
        android:padding="10dp"
        android:text="@string/every_week"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date_hint" />

    <Button
        android:id="@+id/btn_add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/green"
        android:padding="12dp"
        android:text="@string/add_new_task"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tv_date_choose" />

    <TextView
        android:id="@+id/tv_back_to_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/black"
        android:text="@string/back_to_task_list"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btn_add_task" />

</androidx.constraintlayout.widget.ConstraintLayout>